--- a/index.html
+++ b/index.html
@@ -3,35 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Wedding Day</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>#SuShi ki Shaadi</title>
+    <link href="https://fonts.google.com/share?selection.family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container-fluid vh-100 d-flex justify-content-center align-items-center">
-        <div class="row w-100">
-            <!-- Left Column with Countdown Timer -->
-            <div class="col-md-6 d-flex justify-content-center align-items-center text-center">
-                <div class="text-content">
-                    <h1>Countdown Timer</h1>
-                    <div id="countdown" class="countdown-timer">
-                        <span id="days">00</span>d 
-                        <span id="hours">00</span>h 
-                        <span id="minutes">00</span>m 
-                        <span id="seconds">00</span>s
-                    </div>
-                </div>
-            </div>
-            <!-- Right Column with Image -->
-            <div class="col-md-6 d-flex justify-content-center align-items-center">
-                <img src="src/WhatsApp Image 2024-10-18 at 6.54.39 AM.jpeg" alt="Right Image" class="img-fluid custom-img">
+    <div class="overlay">
+        <div class="countdown-container">
+            <h1>#SuShi </h1> <br> <p style="font-size: 24px;">getting ready in :</p>
+            <div id="countdown" class="countdown-timer">
+                <span id="days">00</span>d 
+                <span id="hours">00</span>h 
+                <span id="minutes">00</span>m 
+                <span id="seconds">00</span>s
             </div>
         </div>
     </div>
 
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
